# trafficbot

./: .gitignore  README.md  build.sh  pyproject.toml
.github/workflows/: python-app.yml
src/trafficbot/: __init__.py
tests/: build.py
