[build-system]
requires = ["setuptools>=61.0", "seleniumbase"]
build-backend = "setuptools.build_meta"

[project]
name = "trafficbot"
version = "0.0.2a"
authors = [
  { name="Fakesum", email="worldanvilbild+github@gmail.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Fakesum/trafficbot"
"Bug Tracker" = "https://github.com/Fakesum/trafficbot/issues"
